css/custom.css
/* ... */
/* PAGE TRANSITIONS */
/* ================ */
.project-stage {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	overflow-y: auto;
	overflow-x: hidden;
	display: none;
}

.project-stage.active {
	display: block;
}

.project-stage .progress-bar {
	position: fixed;
	top: 45px;
	left: 0;
	width: 0%;
	height: 4px;
	background: #EA7863;
	z-index: 20;
	border-radius: 0 1px 1px 0;
	-webkit-transition: width 0.1s ease-in;
	-moz-transition: width 0.1s ease-in;
	-o-transition: width 0.1s ease-in;
	-ms-transition: width 0.1s ease-in;
	transition: width 0.1s ease-in;
}

.project-controls {
	z-index: 10;
	position: relative;
	opacity: 0;
	-webkit-transition: opacity 0.25s;
	-moz-transition: opacity 0.25s;
	-o-transition: opacity 0.25s;
	-ms-transition: opacity 0.25s;
	transition: opacity 0.25s;
}
.project-controls.active {
	opacity: 1;
}

.project-controls .nav-project {
	position: fixed;
	left: 50px;
	top: 50%;
	display: block;
	height: 40px;
	width: 40px;
	border-radius: 20px;
	font-size: 26px;
	line-height: 36px;
	font-weight: bold;
	background: rgba(0,0,0,0.25);
	z-index: 10;
	color: #FFF;
	text-align: center;
	text-shadow: 1px 1px 0  rgba(0,0,0,0.1);
}

.project-controls .next-project {
	left: auto;
	text-indent: 2px;
	right: 50px;
}

.project-controls .exit-project {
	top: 50px;
}

.project-controls .exit-project i {
	font-style: normal;
	line-height: 42px;
	-webkit-transform: rotate(45deg);
	-moz-transform: rotate(45deg);
	-o-transform: rotate(45deg);
	-ms-transform: rotate(45deg);
	transform: rotate(45deg);
	display: inline-block;
}

.project-page {
	background: #FFF;
	visibility: hidden;
	overflow: hidden;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	-webkit-backface-visibility: hidden;
	-moz-backface-visibility: hidden;
	backface-visibility: hidden;
	-webkit-transform: translate3d(0, 0, 0);
	-moz-transform: translate3d(0, 0, 0);
	transform: translate3d(0, 0, 0);
	-webkit-transform-style: preserve-3d;
	-moz-transform-style: preserve-3d;
	transform-style: preserve-3d;
}

.project-page.scroll {
	overflow-y: auto;
}

.project-current,
.no-js .project-page {
	height: auto;
	visibility: visible;
	z-index: 1;
}

.project-page img {
	width: 100%;
}

.no-js body {
	overflow: auto;
}

.project-moveToLeft {
	-webkit-animation: moveToLeft .6s ease both;
	-moz-animation: moveToLeft .6s ease both;
	animation: moveToLeft .6s ease both;
}

.project-moveFromLeft {
	-webkit-animation: moveFromLeft .6s ease both;
	-moz-animation: moveFromLeft .6s ease both;
	animation: moveFromLeft .6s ease both;
}

.project-moveToRight {
	-webkit-animation: moveToRight .6s ease both;
	-moz-animation: moveToRight .6s ease both;
	animation: moveToRight .6s ease both;
}

.project-moveFromRight {
	-webkit-animation: moveFromRight .6s ease both;
	-moz-animation: moveFromRight .6s ease both;
	animation: moveFromRight .6s ease both;
}

@-webkit-keyframes moveToLeft {
	to { -webkit-transform: translateX(-100%); }
}
@-moz-keyframes moveToLeft {
	to { -moz-transform: translateX(-100%); }
}
@keyframes moveToLeft {
	to { transform: translateX(-100%); }
}

@-webkit-keyframes moveFromLeft {
	from { -webkit-transform: translateX(-100%); }
}
@-moz-keyframes moveFromLeft {
	from { -moz-transform: translateX(-100%); }
}
@keyframes moveFromLeft {
	from { transform: translateX(-100%); }
}

@-webkit-keyframes moveToRight { 
	to { -webkit-transform: translateX(100%); }
}
@-moz-keyframes moveToRight { 
	to { -moz-transform: translateX(100%); }
}
@keyframes moveToRight { 
	to { transform: translateX(100%); }
}

@-webkit-keyframes moveFromRight {
	from { -webkit-transform: translateX(100%); }
}
@-moz-keyframes moveFromRight {
	from { -moz-transform: translateX(100%); }
}
@keyframes moveFromRight {
	from { transform: translateX(100%); }
}

